# warp

./: CMakeLists.txt  CMakePresets.json  I_ReferenceImage.h  LICENSE  NaiveReference.h  README.md  build.sh  configure.sh  main.cpp  setup.sh  vcpkg.json  warp.code-workspace
include/: CudaProcessorWrapper.h  ExponentialAverage.h  I_CudaProcessor.h  I_Processor.h  I_ReferenceImage.h  Processor.h  WarpingProcessor.h
src/: CMakeLists.txt  CudaProcessorWrapper.cpp  ExponentialAverage.cpp  Processor.cpp  WarpingProcessor.cpp  main.cpp
test/: CMakeLists.txt  TestExponentialAverage.cpp  TestRead.cpp  TestWarpingProcessor.cpp
